pbr: - tone mapper program for Windows and Android

--- a/tools/editor/editor.vcxproj.filters
+++ b/tools/editor/editor.vcxproj.filters
@@ -420,6 +420,9 @@
     <ClCompile Include="..\..\app\src\main\cpp\sources\platform\android\pbr\tone_mapper_program.cpp">
       <Filter>Source Files\core\platform\FUCK android\pbr</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\app\src\main\cpp\sources\platform\windows\pbr\tone_mapper_program.cpp">
+      <Filter>Source Files\core\platform\windows\pbr</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\app\src\main\cpp\include\logger.hpp">
@@ -874,6 +877,9 @@
     </ClInclude>
     <ClInclude Include="..\..\app\src\main\cpp\include\platform\android\pbr\tone_mapper_program.hpp">
       <Filter>Header Files\core\platform\FUCK android\pbr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\app\src\main\cpp\include\platform\windows\pbr\tone_mapper_program.hpp">
+      <Filter>Header Files\core\platform\window\pbr</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
